@@ -8,6 +8,10 @@ urlgrabber (3.1.0-5) UNRELEASED; urgency=low
   * debian/control
     - switch Vcs-Browser field to viewsvn
 
+  [ Jakub Wilk ]
+  * Build-depend on python-all rather than python-all-dev.
+  * Remove superfluous references to CFLAGS from debian/rules.
+
  -- Piotr Ożarowski <piotr@debian.org>  Sat,  6 Oct 2007 23:47:35 +0200
 
 urlgrabber (3.1.0-4) unstable; urgency=low
